feat: added min and max serve prices in the getAllTea request
